<resources>
    <string name="app_name">Hostel Guide</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="action_settings">Settings</string>
    <string name="backdrop_title">MyHostel</string>
    <string name="backdrop_subtitle">Book your favourite</string>
    <string name="book_hotel">Book</string>
    <string name="draft_book">Add to Drafts</string>
    <string name="title_activity_hotel_viewer">Hostel Guide</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Hostel Guide</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username!</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="loc"><a style="color:white;" href="https://goo.gl/maps/or72yUEihmpRbka19">Location</a></string>
    <string name="pay"><a style="color:white;" href="upi://pay?pa=smrsawarkar1@oksbi%38pn=Sameer%20Sawarkar%38am=100%38aid=uGICAgIC1kb_vKw">Payment</a></string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_otp_on_entered_mobile_number">We will send you OTP on entered mobile number</string>
    <string name="enter_mobile_number">Enter Mobile number</string>
    <string name="_91">+91-</string>
    <string name="_1234567890">1234567890</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_the_otp_sent_to">Enter the OTP Sent to</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify">Verify</string>
    <string name="verification">verification</string>
</resources>
