<?xml version="1.0" encoding="UTF-8"?>

    <ScrollView tools:context=".SendOTPActivity" android:scrollbars="none" android:overScrollMode="never" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical" android:gravity="center_horizontal">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textStyle="bold" android:textSize="35sp" android:textColor="@color/colorTextPrimary" android:text="Enter Card Details" android:layout_margin="30dp"/>

    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:gravity="center" android:textSize="20sp" android:textColor="@color/colorTextSecondary" android:text="@string/we_will_send_you_otp_on_entered_mobile_number" android:layout_marginTop="10dp"/>

    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:gravity="center" android:textSize="14sp" android:textColor="@color/colorTextSecondary" android:text="@string/enter_mobile_number" android:layout_marginTop="50dp" android:layout_marginEnd="30dp" android:layout_marginStart="30dp"/>


    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal" android:gravity="center" android:layout_marginEnd="60dp" android:layout_marginStart="60dp">

    <TextView android:layout_height="40dp" android:layout_width="wrap_content" android:gravity="center" android:textStyle="bold" android:textSize="16sp" android:textColor="@color/colorTextPrimary" android:text="@string/_91"/>

    <EditText android:layout_height="40dp" android:layout_width="wrap_content" android:textStyle="bold" android:textSize="16sp" android:textColor="@color/colorTextPrimary" android:inputType="number" android:importantForAutofill="no" android:imeOptions="actionDone" android:hint="@string/_1234567890" android:background="@null" android:id="@+id/inputMobile"/>

</LinearLayout>

    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:gravity="center" android:textSize="14sp" android:textColor="@color/colorTextSecondary" android:text="Enter Debit/Credit Card Number" android:layout_marginTop="50dp" android:layout_marginEnd="30dp" android:layout_marginStart="30dp"/>

    <EditText android:layout_height="40dp" android:layout_width="wrap_content" android:textStyle="bold" android:textSize="16sp" android:textColor="@color/colorTextPrimary" android:inputType="number" android:importantForAutofill="no" android:imeOptions="actionDone" android:hint="Card No" android:background="@null" android:id="@+id/inputCardNo"/>

    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:gravity="center" android:textSize="14sp" android:textColor="@color/colorTextSecondary" android:text="Enter CVV from Back side of card" android:layout_marginTop="50dp" android:layout_marginEnd="30dp" android:layout_marginStart="30dp"/>

    <EditText android:layout_height="40dp" android:layout_width="wrap_content" android:textStyle="bold" android:textSize="16sp" android:textColor="@color/colorTextPrimary" android:inputType="number" android:importantForAutofill="no" android:imeOptions="actionDone" android:hint="CVV" android:background="@null" android:id="@+id/inputCVV"/>

    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:gravity="center" android:textSize="14sp" android:textColor="@color/colorTextSecondary" android:text="Enter CVV from Back side of card" android:layout_marginTop="50dp" android:layout_marginEnd="30dp" android:layout_marginStart="30dp"/>

    <EditText android:layout_height="40dp" android:layout_width="wrap_content" android:textStyle="bold" android:textSize="16sp" android:textColor="@color/colorTextPrimary" android:inputType="number" android:importantForAutofill="no" android:imeOptions="actionDone" android:hint="MMYY" android:background="@null" android:id="@+id/inputDate"/>

    <View android:layout_height="2dp" android:layout_width="match_parent" android:layout_marginTop="8dp" android:layout_marginEnd="70dp" android:layout_marginStart="70dp" android:background="@color/colorDivider"/>


    <FrameLayout android:layout_height="wrap_content" android:layout_width="match_parent">

    <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:textStyle="bold" android:textSize="16sp" android:textColor="@color/colorWhite" android:text="@string/get_otp" android:layout_margin="30dp" android:background="@color/colorPrimary" android:id="@+id/buttonGetOTP"/>

    <ProgressBar android:layout_height="40dp" android:layout_width="40dp" android:id="@+id/progressBar" android:visibility="gone" android:layout_gravity="center"/>

</FrameLayout>

</LinearLayout>

</ScrollView>