<?xml version="1.0" encoding="UTF-8"?>

    <ScrollView tools:context=".VerifyOTPActivity" android:scrollbars="none" android:overScrollMode="never" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical" android:gravity="center_horizontal">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textStyle="bold" android:textSize="40sp" android:textColor="@color/colorTextPrimary" android:text="@string/otp_verification" android:layout_margin="30dp"/>

    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:gravity="center" android:textSize="20sp" android:textColor="@color/colorTextSecondary" android:text="@string/enter_the_otp_sent_to" android:layout_marginTop="10dp"/>

    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:gravity="center" android:textStyle="bold" android:textSize="14sp" android:textColor="@color/colorTextPrimary" android:layout_marginTop="4dp" android:layout_marginEnd="50dp" android:layout_marginStart="50dp" android:id="@+id/textMobile"/>


    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal" android:gravity="center" android:layout_marginTop="30dp">

    <EditText android:layout_height="50dp" android:layout_width="40dp" android:gravity="center" android:textStyle="bold" android:textSize="24sp" android:textColor="@color/colorTextPrimary" android:id="@+id/inputCode1" tools:ignore="LabelFor" android:maxLength="1" android:inputType="number" android:importantForAutofill="no" android:imeOptions="actionNext"/>

    <EditText android:layout_height="50dp" android:layout_width="40dp" android:gravity="center" android:textStyle="bold" android:textSize="24sp" android:textColor="@color/colorTextPrimary" android:layout_marginStart="4dp" android:id="@+id/inputCode2" tools:ignore="LabelFor" android:maxLength="1" android:inputType="number" android:importantForAutofill="no" android:imeOptions="actionNext" android:layout_marginLeft="4dp"/>

    <EditText android:layout_height="50dp" android:layout_width="40dp" android:gravity="center" android:textStyle="bold" android:textSize="24sp" android:textColor="@color/colorTextPrimary" android:layout_marginStart="4dp" android:id="@+id/inputCode3" tools:ignore="LabelFor" android:maxLength="1" android:inputType="number" android:importantForAutofill="no" android:imeOptions="actionNext" android:layout_marginLeft="4dp"/>

    <EditText android:layout_height="50dp" android:layout_width="40dp" android:gravity="center" android:textStyle="bold" android:textSize="24sp" android:textColor="@color/colorTextPrimary" android:layout_marginStart="4dp" android:id="@+id/inputCode4" tools:ignore="LabelFor" android:maxLength="1" android:inputType="number" android:importantForAutofill="no" android:imeOptions="actionNext" android:layout_marginLeft="4dp"/>

    <EditText android:layout_height="50dp" android:layout_width="40dp" android:gravity="center" android:textStyle="bold" android:textSize="24sp" android:textColor="@color/colorTextPrimary" android:layout_marginStart="4dp" android:id="@+id/inputCode5" tools:ignore="LabelFor" android:maxLength="1" android:inputType="number" android:importantForAutofill="no" android:imeOptions="actionNext" android:layout_marginLeft="4dp"/>

    <EditText android:layout_height="50dp" android:layout_width="40dp" android:gravity="center" android:textStyle="bold" android:textSize="24sp" android:textColor="@color/colorTextPrimary" android:layout_marginStart="4dp" android:id="@+id/inputCode6" tools:ignore="LabelFor" android:maxLength="1" android:inputType="number" android:importantForAutofill="no" android:imeOptions="actionDone" android:layout_marginLeft="4dp"/>

</LinearLayout>


    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal" android:gravity="center" android:layout_marginTop="20dp">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="14sp" android:textColor="@color/colorTextSecondary" android:text="@string/didn_t_receive_the_otp"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textStyle="bold" android:textSize="15sp" android:textColor="@color/colorAccent" android:text="@string/resend_otp" android:layout_marginStart="8dp" android:id="@+id/textResendOTP" android:layout_marginLeft="8dp"/>

</LinearLayout>

    <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:textStyle="bold" android:textSize="16sp" android:textColor="@color/colorWhite" android:text="@string/verify" android:layout_margin="30dp" android:id="@+id/buttonVerify" android:background="@color/colorPrimary"/>

</LinearLayout>

</ScrollView>